examples/test/testpolicy291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy291
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key17: value4
      key42: value39
      key5: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value6
          key2: value34
          key27: value13
      podSelector:
        matchLabels:
          key39: value38
          key36: value16
          key14: value28
